# database-debugging

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
migrations/2024-02-27-200920_create_principals/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
